# moe

./: .env  .gitignore  CLAUDE.md  FIX_README.md  MULTINODE_README.md  README.md  gcp_setup.sh  modal_train.py  pyproject.toml  train.py
accelerate_configs/: ddp_8gpu.yaml  fsdp_8gpu.yaml
configs/: global_moe.yaml  standard_moe.yaml
configs/scaling/: debug8_xs_deepseek_global.yaml  debug8_xs_deepseek_global_e16.yaml  debug8_xs_deepseek_global_e16_k1.yaml  debug8_xs_deepseek_global_e64.yaml  debug8_xs_deepseek_global_nointerp.yaml  (+18 more)
scripts/: compare_1000_steps.py  compare_training_steps.py  debug_tiny_global_vs_perlayer.py  diagnose_identical_loss.py  download_data.py  first_principles.py  full_audit.py  launch_all.sh  test_dense_vs_moe.py  test_hidden_states.py  test_high_lr.py  test_l_scale.py  test_liger_effect.py  test_real_vs_random_data.py  test_seed_vs_arch.py  test_xs_no_liger_weights.py  test_xs_weights_v2.py  train.sh
tests/: test_auto_resume.py  test_aux_loss_fix.py  test_bias_update_detailed.py  test_bias_update_real.py  test_capacity_is_king.py  test_ce_identical.py  test_ce_loss_diagnosis.py  test_ce_old_config.py  test_checkpoint_resume.py  test_divergence_learnable.py  test_divergence_long.py  test_divergence_real.py  test_final_verification.py  test_integration.py  test_logits_differ.py  test_megatron_comparison.py  test_models.py  test_not_same_stuff.py  test_parquet_edge_cases.py  test_parquet_resume.py  test_router_deepseek_v3.py  test_routing_stats.py  test_seq_loss_vs_paper.py
torchrun_util/: argparse_to_pydantic.py  argparse_util.py
(+12 files in other folders)
